--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,14 @@
 
     <fragment
             android:name="androidx.navigation.fragment.NavHostFragment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:navGraph="@navigation/nav_graph"
             app:defaultNavHost="true"
-            android:id="@+id/nav_host_fragment"/>
+            android:id="@+id/nav_host_fragment"
+            tools:layout="@layout/fragment_home"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
