--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/nav_graph"
-            app:startDestination="@id/homeFragment"
-            xmlns:tools="http://schemas.android.com/tools">
+            app:startDestination="@id/homeFragment">
 
     <fragment android:id="@+id/homeFragment"
               android:name="com.datikaa.themoviedbapp.fragment.HomeFragment"
               android:label="HomeFragment"
-              tools:layout="@layout/home_fragment"/>
+              tools:layout="@layout/fragment_home">
+        <action android:id="@+id/action_homeFragment_to_listFragment" app:destination="@id/listFragment"
+                app:enterAnim="@anim/nav_default_enter_anim" app:exitAnim="@anim/nav_default_exit_anim"
+                app:popEnterAnim="@anim/nav_default_pop_enter_anim" app:popExitAnim="@anim/nav_default_pop_exit_anim"
+        />
+    </fragment>
+
+    <fragment android:id="@+id/listFragment"
+              android:name="com.datikaa.themoviedbapp.fragment.ListFragment"
+              android:label="ListFragment"
+              tools:layout="@layout/fragment_list"/>
 </navigation>
