--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:navGraph="@navigation/nav_graph"
             app:defaultNavHost="true"
-            android:id="@+id/nav_host_fragment"
+            android:id="@+id/navHostFragment"
             tools:layout="@layout/fragment_home"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
