--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,7 @@
               android:name="com.datikaa.themoviedbapp.fragment.HomeFragment"
               android:label="HomeFragment"
               tools:layout="@layout/fragment_home">
-        <action android:id="@+id/action_homeFragment_to_listFragment" app:destination="@id/listFragment"
+        <action android:id="@+id/openListFragmentFromHome" app:destination="@id/listFragment"
                 app:enterAnim="@anim/nav_default_enter_anim" app:exitAnim="@anim/nav_default_exit_anim"
                 app:popEnterAnim="@anim/nav_default_pop_enter_anim" app:popExitAnim="@anim/nav_default_pop_exit_anim"
         />
@@ -18,5 +18,7 @@
     <fragment android:id="@+id/listFragment"
               android:name="com.datikaa.themoviedbapp.fragment.ListFragment"
               android:label="ListFragment"
-              tools:layout="@layout/fragment_list"/>
+              tools:layout="@layout/fragment_list">
+        <argument app:argType="string" android:name="searchedFor" />
+    </fragment>
 </navigation>
