--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.motion.widget.MotionLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -26,8 +26,17 @@
             android:text="Search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             app:layout_constraintLeft_toLeftOf="@id/inputLayout_searchedFor"
             app:layout_constraintRight_toRightOf="@id/inputLayout_searchedFor"
             app:layout_constraintTop_toBottomOf="@id/inputLayout_searchedFor"
             android:id="@+id/button_search"/>
-</androidx.constraintlayout.motion.widget.MotionLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="@id/button_search"
+            app:layout_constraintRight_toRightOf="@id/button_search"
+            app:layout_constraintTop_toBottomOf="@id/button_search"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
