--- a/app/src/main/res/layout/movie_card.xml
+++ b/app/src/main/res/layout/movie_card.xml
@@ -16,6 +16,14 @@
                   android:layout_height="wrap_content"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintLeft_toLeftOf="parent"
+                  tools:text="Movie title"/>
+
+        <TextView android:id="@+id/movie_id"
+                  android:layout_margin="10dp"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  app:layout_constraintTop_toBottomOf="@id/movie_title"
+                  app:layout_constraintRight_toRightOf="parent"
                   app:layout_constraintBottom_toBottomOf="parent"
                   tools:text="Movie title"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
