--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,44 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:focusableInTouchMode="true">
+<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutDescription="@xml/scene">
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/inputLayout_searchedFor"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        app:hintEnabled="false"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/inputLayout_searchedFor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Search for movies" />
+            app:hintEnabled="false">
+
+        <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Search for movies" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/button_search"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="Search"
-        app:layout_constraintLeft_toLeftOf="@id/inputLayout_searchedFor"
-        app:layout_constraintRight_toRightOf="@id/inputLayout_searchedFor"
-        app:layout_constraintTop_toBottomOf="@id/inputLayout_searchedFor" />
+            android:id="@+id/button_search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Search" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="@id/button_search"
-        app:layout_constraintRight_toRightOf="@id/button_search"
-        app:layout_constraintTop_toBottomOf="@id/button_search"
-        tools:listitem="@layout/movie_card" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="@id/button_search"
+            app:layout_constraintRight_toRightOf="@id/button_search"
+            app:layout_constraintTop_toBottomOf="@id/button_search"
+            tools:listitem="@layout/movie_card" />
+</androidx.constraintlayout.motion.widget.MotionLayout>
