--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -6,7 +6,7 @@
 
     <ImageView
         android:id="@+id/imageView_background"
-        android:transitionName="imageView_background_transition"
+        android:transitionName="imageView_background"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -16,7 +16,7 @@
 
     <TextView
         android:id="@+id/textView_movieTitle"
-        android:transitionName="textView_movieTitle_transition"
+        android:transitionName="textView_movieTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
